feat: initialize base project architecture with Spring Boot, Vaadin, and MySQL configuration